# MLOps-Level3

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: actions.yaml
week-1/: README.md  pyproject.toml  titanic_data_exploration.ipynb  titanic_survival_from_scratch.ipynb  titanic_survival_using_built-in_libs.ipynb
week-1/templates/: titanic_survival_part_2_template.ipynb
week-2/: README.md  eda.ipynb  pyproject.toml
week-2/data/raw/: raw_bike_rental_hourly.csv  raw_direct_pick_up_hourly.csv
week-2/src/bike_rental/: __init__.py  definitions.py
week-2/src/bike_rental/defs/: __init__.py
week-2/src/bike_rental/defs/assets/: __init__.py  bike_rental.py  constants.py  data_merging.py  helper.py  raw_data.py  transformation.py
week-2/src/bike_rental/defs/io_managers/: __init__.py
week-2/src/bike_rental/defs/resources/: __init__.py  csv_io.py  project_config.py
