[project]
name = "mlops-level3"
version = "0.1.0"
description = "UV managed venv for MLOps - Level3 Track"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "ruff>=0.15.13",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
